# tgaa2-en-patch

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  run.sh
config/: tgaa1-update.rsf.in  tgaa2-update.rsf.in
debug/: tgaa2_glyph_probe.gdb
dgs2tool/: __init__.py  align.py  arc.py  batch.py  bps.py  cli.py  firm.py  gmd.py  ips.py  location_captions.py  manifest.py  pagination.py  titlemeta.py
reference/: glossary.sample.json  manifest-v2.1.0.json
scripts/: add_tgaa1_title_dlc_resource.py  apply_dlc_direct_translation.py  apply_tgaa1_3ds_wording.py  apply_tgaa1_special_translation.py  build_3ds_official_layout.py  build_court_record_hook.sh  build_tgaa2_court_record_hook.sh  decode_3ds_rgba8_tex.py  import_game_data.py  inject_court_record_hook.py  legacy_delta.py  paginate_tgaa1_dlc_dialogue.py  parse_tgaa2_glyph_probe.py  patch_dlc_offline.py  patch_tgaa1_3ds_ui.py  patch_tgaa1_code_version.py  patch_tgaa1_dlc_offline.py  patch_tgaa1_title_dlc_texture.py  patch_title_metadata.py  port_tgaa1_dlc_official.py  port_tgaa1_message_exceptions.py  port_tgaa1_script_exceptions.py  prepare_hook_romfs.py  reflow_dlc_layout.py  restore_tgaa1_title_dlc_gui.py  restore_title_dlc_gui.py
tests/: court_record_hook_host.c  test_arc.py  test_batch.py  test_bps.py  test_court_record_hook.c  test_court_record_hook_corpus.py  test_court_record_layout.py  test_firm_manifest.py  test_gmd.py  test_inject_court_record_hook.py  test_ips.py  test_opening_movie_layout.py  test_pagination.py  test_tgaa1_special_translation.py  test_tgaa1_ui.py  test_titlemeta.py
(+449 files in other folders)
