[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dgs2-english-patch-tools"
version = "0.1.0"
description = "Clean-room tooling for continuing the DGS2 3DS English patch"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "DGS2 community contributors" }]

[project.scripts]
dgs2tool = "dgs2tool.cli:main"

[tool.setuptools]
packages = ["dgs2tool"]
