[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tgaa-3ds-english-patch-tools"
version = "0.2.0"
description = "Clean-room tooling for TGAA1/TGAA2 English 3DS patches"
requires-python = ">=3.10"
dependencies = ["Pillow>=9"]
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "TGAA community contributors" }]

[project.scripts]
dgs2tool = "dgs2tool.cli:main"

[tool.setuptools]
packages = ["dgs2tool"]
